--- a/src/style.css
+++ b/src/style.css
@@ -104,25 +104,29 @@
 
 @utility container {
   margin-inline: auto;
-  padding-inline: 2rem;
 
   @media (width>= 640px) {
     max-width: 640px;
+    padding-inline: 4px;
   }
 
   @media (width>= 768px) {
     max-width: 768px;
+    padding-inline: 1rem;
   }
 
   @media (width>= 1024px) {
     max-width: 1024px;
+    padding-inline: 2rem;
   }
 
   @media (width>= 1280px) {
     max-width: 1280px;
+    padding-inline: 2rem;
   }
   @media (width>= 1400px) {
     max-width: 1400px;
+    padding-inline: 2rem;
   }
 }
 @utility text-glow {
@@ -149,7 +153,7 @@
 
 @utility meteor {
   @apply absolute bg-linear-to-r from-white via-white to-transparent rounded-full;
-  box-shadow: 0 0 10px 5px rgb(255, 255, 255, 0.3);
+  box-shadow: 0 0 10px 5px rgb(255, 255, 255, 0.4);
 }
 
 @layer components {
