--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,7 @@
 
     --card: 0 0% 100%;
 
-    --primary: 250 47% 60%;
+    --primary: 208 79% 51%;
     --primary-foreground: 210 40% 98%;
 
     --border: 214 32% 91%;
@@ -85,7 +85,7 @@
 
     --card: 222 47% 8%;
 
-    --primary: 250 65% 65%;
+    --primary: 208 79% 51%;
     --primary-foreground: 213 31% 91%;
 
     --border: 217 33% 20%;
@@ -158,19 +158,20 @@
 
 @layer components {
   .imgContainer {
-    height: 180px;
-    width: 180px;
+    height: 256px;
+    width: 256px;
     position: relative;
   }
   .imgContainer::after {
     content: "";
-    height: 190px;
-    width: 190px;
+    height: 265px;
+    width: 265px;
 
     background-image: conic-gradient(
       from var(--angle),
-      hsl(250, 65%, 65%) 50%,
-      transparent
+      hsl(225, 80%, 56%) 30%,
+      transparent 30%,
+      hsl(225, 80%, 65%) 30%
     );
     position: absolute;
     top: 50%;
